
  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream release (closes: #959666).
    - Bump Qt build dependencies.
  * Make libqt5xmlpatterns5-dev depend upon qtbase5-dev | qtbase5-gles-dev.

  [ Dmitry Shachnev ]
  * Update to debhelper compat level 13.
    - Build-depend on debhelper-compat virtual package.
    - Remove dh_missing and dh_makeshlibs overrides, no longer needed.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 16 Feb 2020 18:21:00 -0300

qtxmlpatterns-opensource-src (5.12.5-1) unstable; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.12.5.
  * Minor debian/copyright update.
  * Run tests in Xvfb, needed for the new qquickxmllistmodel test.
  * Bump Standards-Version to 4.4.1, no changes needed.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 21 Oct 2019 18:03:39 +0300

qtxmlpatterns-opensource-src (5.12.4-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.12.4.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 27 Jun 2019 21:51:36 +0300

qtxmlpatterns-opensource-src (5.12.3-1) experimental; urgency=medium

  [ Scarlett Moore ]
  * Update packaging to use doc-base as per policy 9.10.

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.12.3.
  * Add Build-Depends-Package field to debian/libqt5xmlpatterns5.symbols.
  * Use debian/not-installed file instead of an override target.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 16 May 2019 17:21:13 +0300

qtxmlpatterns-opensource-src (5.12.2-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.12.2.
  * Build-depend on qtdeclarative5-private-dev and qml-module-qtquick2,
    needed for xmllistmodel module and its tests.
  * Add qml-module-qtquick-xmllistmodel package, moved from qtdeclarative.
  * Add Qt_5.12 version tag to debian/libqt5xmlpatterns5.symbols.
  * Update Homepage URL.
